--- a/header.ejs
+++ b/header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">EJS Is Fun</a>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
@@ -8,4 +8,112 @@
         <a class="nav-link" href="/about">About</a>
       </li>
     </ul>
-  </nav>
+  </nav> -->
+
+  <div class="header">
+    <ul class="nav">
+        <li><a href="">Home</a></li>
+        <li><a href="">Band</a></li>
+        <li><a href="">Tour</a></li>
+        <li><a href="">Contact</a></li>
+        <li>
+            <a href="">
+                More
+                <i class=" nav-arrow-down ti-angle-down"></i>
+            </a>
+            <ul class="subnav">
+                <li><a href="">Merchandise</a></li>
+                <li><a href="">Extras</a></li>
+                <li><a href="">Media</a></li>
+            </ul>
+        </li>
+    </ul>
+    <div class="search-btn">
+        <div class="search-icon ti-search"></div>
+    </div>
+</div> 
+<style>
+  *{
+    padding:0%;
+    margin:0;
+    box-sizing: border-box;
+}
+html{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.header{
+    height:46px;
+    background-color:#000;
+    position:fixed;
+    top:0;
+    left:0;
+    right:0;
+}
+.nav{
+    display:inline-block;
+}
+.nav, .subnav{
+    list-style: none;
+}
+.nav > li{
+    display: inline-block;
+
+}
+.nav li{
+    position: relative;
+}
+.nav > li > a{
+    color: #ccc;
+    text-transform: uppercase;
+}
+.nav li a{
+    text-decoration: none;
+    line-height: 46px;
+    padding: 0 24px;
+    display:block;
+}
+.nav .subnav li:hover a, 
+.nav > li:hover > a{
+    color:#000;
+    background-color: #ccc;
+}
+.nav li:hover .subnav{
+    display:block;
+}
+.nav .subnav{
+    display: none;
+    min-width: 160px;
+    position: absolute;
+    top:100%;
+    left:0;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}.nav .subnav a{
+    color:#000;
+    padding: 0 12px;
+    line-height: 38px;
+}
+.nav .nav-arrow-down{
+    font-size: 14px;
+}
+.header .search-btn{
+    float: right;
+    padding:0 21px;
+}
+.header .search-btn:hover{
+    background-color: #f44336;
+    cursor:pointer;
+}
+.header .search-icon{
+    color:#fff;
+    font-size: 20px;
+    line-height: 46px;
+
+}
+.slider{
+    min-height: 1500px;
+    background-color: #333;
+    margin-top: 46px;
+}
+</style>
