--- a/footer.ejs
+++ b/footer.ejs
@@ -1,4 +1,111 @@
-<p class="text-center text-muted">&copy; Copyright 2023 NeshTech</p>
+<link rel="stylesheet" type="text/css" href="/index.css"
 <div class="footer">
-    <
+    <div class="container">
+        <div class="row">
+            <div class="footer-col">
+                <h4>company</h4>
+                <ul>
+                    <li><a href="#">about us</a></li>
+                    <li><a href="#">our services</a></li>
+                    <li><a href="#">privacy policy</a></li>
+                    <li><a href="#">filiate program</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="footer-col">
+                <h4>get help</h4>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">shipping</a></li>
+                    <li><a href="#">returns</a></li>
+                    <li><a href="#">prder status</a></li>
+                    <li><a href="#">payment options</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="footer-col">
+                <h4>online shop</h4>
+                <ul>
+                    <li><a href="#">watch</a></li>
+                    <li><a href="#">bag</a></li>
+                    <li><a href="#">shoe</a></li>
+                    <li><a href="#">dress</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="footer-col">
+                <h4>follow us</h4>
+                <ul>
+                    <li><a href="#">coats</a></li>
+                    <li><a href="#">bags</a></li>
+                    <li><a href="#">tables</a></li>
+                    <li><a href="#">lux</a></li>
+                </ul>
+            </div>
+        
 </div>
+<style>
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html{
+    font-family: Arial, Helvetica, sans-serif;
+}
+.footer{
+    background-color: #000;
+    height:270px;
+}
+.container{
+    width:100%;
+    display:inline-block;
+}
+
+
+.row{
+    float: left;
+    width: 25%;
+}
+.row li{
+    display: inline-block;
+}
+.footer-col{
+    width:25%;
+    padding: 0 15px;
+}
+.footer-col h4{
+    font-size: 22px;
+    color: aqua;
+    width:190px;
+    text-transform: capitalize;
+    margin-bottom: 30px;
+    font-weight: 500;
+    position:relative;
+}
+.footer-col h4::before{
+    content:'';
+    position:absolute;
+    left:0;
+    bottom:-10px;
+    background-color: #e91e63;
+    height:2px;
+    box-sizing: border-box;
+    width:50px;
+}
+.footer-col ul li a{
+    text-decoration: none;
+    text-decoration: capitalize;
+    color:#fff;
+    font-size: 18px;
+    width:170px;
+    font-weight: 300;
+    color:#bbbbbb;
+    display:block;
+    padding: 5px 0;
+}
+
+</style>
